added to the dom, so you can add your catalog from browser

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>git 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -43,7 +43,7 @@
     </div>
   </form>
   <button type="button" id="submit_btn" class="btn btn-primary mb-2">Add Media</button>
-  <p class="catalogLibrary" id="catalogLibrary" rows="3"></p>
+  <ol><span class="catalogLibrary" id="catalogLibrary" rows="3"></span></ol>
 </div>
 
   <script src="./script.js"></script>
